src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program sentence
Rule 2     program -> sentence
Rule 3     sentence -> expression PERIOD
Rule 4     sentence -> definition PERIOD
Rule 5     sentence -> question
Rule 6     expression -> term
Rule 7     expression -> expression PLUS term
Rule 8     expression -> expression MINUS term
Rule 9     term -> term TIMES factor
Rule 10    term -> term DIVIDED BY factor
Rule 11    term -> factor
Rule 12    factor -> number
Rule 13    definition -> id IS A id
Rule 14    definition -> id IS AN id
Rule 15    definition -> id ARE COLON list
Rule 16    definition -> id IS COLON list
Rule 17    definition -> id IS datatype
Rule 18    question -> WHAT IS entity QUEST
Rule 19    question -> IS_UP entity bool QUEST
Rule 20    question -> IS_UP entity A datatype QUEST
Rule 21    question -> IS_UP entity entity QUEST
Rule 22    question -> ARE_UP list entity QUEST
Rule 23    question -> ARE_UP entity A datatype QUEST
Rule 24    entity -> id
Rule 25    entity -> datatype
Rule 26    datatype -> number
Rule 27    datatype -> bool
Rule 28    list -> entity COMMA list
Rule 29    list -> entity
Rule 30    bool -> TRUE
Rule 31    bool -> FALSE
Rule 32    number -> NUMBER
Rule 33    number -> NEGATIVE NUMBER
Rule 34    id -> ID

Terminals, with rules where they appear

A                    : 13 20 23
AN                   : 14
ARE                  : 15
ARE_UP               : 22 23
BY                   : 10
COLON                : 15 16
COMMA                : 28
DIVIDED              : 10
FALSE                : 31
ID                   : 34
IS                   : 13 14 16 17 18
IS_UP                : 19 20 21
MINUS                : 8
NEGATIVE             : 33
NUMBER               : 32 33
PERIOD               : 3 4
PLUS                 : 7
QUEST                : 18 19 20 21 22 23
TIMES                : 9
TRUE                 : 30
WHAT                 : 18
error                : 

Nonterminals, with rules where they appear

bool                 : 19 27
datatype             : 17 20 23 25
definition           : 4
entity               : 18 19 20 21 21 22 23 28 29
expression           : 3 7 8
factor               : 9 10 11
id                   : 13 13 14 14 15 16 17 24
list                 : 15 16 22 28
number               : 12 26
program              : 1 0
question             : 5
sentence             : 1 2
term                 : 6 7 8 9 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program sentence
    (2) program -> . sentence
    (3) sentence -> . expression PERIOD
    (4) sentence -> . definition PERIOD
    (5) sentence -> . question
    (6) expression -> . term
    (7) expression -> . expression PLUS term
    (8) expression -> . expression MINUS term
    (13) definition -> . id IS A id
    (14) definition -> . id IS AN id
    (15) definition -> . id ARE COLON list
    (16) definition -> . id IS COLON list
    (17) definition -> . id IS datatype
    (18) question -> . WHAT IS entity QUEST
    (19) question -> . IS_UP entity bool QUEST
    (20) question -> . IS_UP entity A datatype QUEST
    (21) question -> . IS_UP entity entity QUEST
    (22) question -> . ARE_UP list entity QUEST
    (23) question -> . ARE_UP entity A datatype QUEST
    (9) term -> . term TIMES factor
    (10) term -> . term DIVIDED BY factor
    (11) term -> . factor
    (34) id -> . ID
    (12) factor -> . number
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER

    WHAT            shift and go to state 8
    IS_UP           shift and go to state 9
    ARE_UP          shift and go to state 10
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15

    program                        shift and go to state 1
    sentence                       shift and go to state 2
    expression                     shift and go to state 3
    definition                     shift and go to state 4
    question                       shift and go to state 5
    term                           shift and go to state 6
    id                             shift and go to state 7
    factor                         shift and go to state 11
    number                         shift and go to state 13

state 1

    (0) S' -> program .
    (1) program -> program . sentence
    (3) sentence -> . expression PERIOD
    (4) sentence -> . definition PERIOD
    (5) sentence -> . question
    (6) expression -> . term
    (7) expression -> . expression PLUS term
    (8) expression -> . expression MINUS term
    (13) definition -> . id IS A id
    (14) definition -> . id IS AN id
    (15) definition -> . id ARE COLON list
    (16) definition -> . id IS COLON list
    (17) definition -> . id IS datatype
    (18) question -> . WHAT IS entity QUEST
    (19) question -> . IS_UP entity bool QUEST
    (20) question -> . IS_UP entity A datatype QUEST
    (21) question -> . IS_UP entity entity QUEST
    (22) question -> . ARE_UP list entity QUEST
    (23) question -> . ARE_UP entity A datatype QUEST
    (9) term -> . term TIMES factor
    (10) term -> . term DIVIDED BY factor
    (11) term -> . factor
    (34) id -> . ID
    (12) factor -> . number
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER

    WHAT            shift and go to state 8
    IS_UP           shift and go to state 9
    ARE_UP          shift and go to state 10
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15

    sentence                       shift and go to state 16
    expression                     shift and go to state 3
    definition                     shift and go to state 4
    question                       shift and go to state 5
    term                           shift and go to state 6
    id                             shift and go to state 7
    factor                         shift and go to state 11
    number                         shift and go to state 13

state 2

    (2) program -> sentence .

    WHAT            reduce using rule 2 (program -> sentence .)
    IS_UP           reduce using rule 2 (program -> sentence .)
    ARE_UP          reduce using rule 2 (program -> sentence .)
    ID              reduce using rule 2 (program -> sentence .)
    NUMBER          reduce using rule 2 (program -> sentence .)
    NEGATIVE        reduce using rule 2 (program -> sentence .)
    $end            reduce using rule 2 (program -> sentence .)


state 3

    (3) sentence -> expression . PERIOD
    (7) expression -> expression . PLUS term
    (8) expression -> expression . MINUS term

    PERIOD          shift and go to state 17
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19


state 4

    (4) sentence -> definition . PERIOD

    PERIOD          shift and go to state 20


state 5

    (5) sentence -> question .

    WHAT            reduce using rule 5 (sentence -> question .)
    IS_UP           reduce using rule 5 (sentence -> question .)
    ARE_UP          reduce using rule 5 (sentence -> question .)
    ID              reduce using rule 5 (sentence -> question .)
    NUMBER          reduce using rule 5 (sentence -> question .)
    NEGATIVE        reduce using rule 5 (sentence -> question .)
    $end            reduce using rule 5 (sentence -> question .)


state 6

    (6) expression -> term .
    (9) term -> term . TIMES factor
    (10) term -> term . DIVIDED BY factor

    PERIOD          reduce using rule 6 (expression -> term .)
    PLUS            reduce using rule 6 (expression -> term .)
    MINUS           reduce using rule 6 (expression -> term .)
    TIMES           shift and go to state 21
    DIVIDED         shift and go to state 22


state 7

    (13) definition -> id . IS A id
    (14) definition -> id . IS AN id
    (15) definition -> id . ARE COLON list
    (16) definition -> id . IS COLON list
    (17) definition -> id . IS datatype

    IS              shift and go to state 23
    ARE             shift and go to state 24


state 8

    (18) question -> WHAT . IS entity QUEST

    IS              shift and go to state 25


state 9

    (19) question -> IS_UP . entity bool QUEST
    (20) question -> IS_UP . entity A datatype QUEST
    (21) question -> IS_UP . entity entity QUEST
    (24) entity -> . id
    (25) entity -> . datatype
    (34) id -> . ID
    (26) datatype -> . number
    (27) datatype -> . bool
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER
    (30) bool -> . TRUE
    (31) bool -> . FALSE

    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32

    entity                         shift and go to state 26
    bool                           shift and go to state 27
    datatype                       shift and go to state 28
    id                             shift and go to state 29
    number                         shift and go to state 30

state 10

    (22) question -> ARE_UP . list entity QUEST
    (23) question -> ARE_UP . entity A datatype QUEST
    (28) list -> . entity COMMA list
    (29) list -> . entity
    (24) entity -> . id
    (25) entity -> . datatype
    (34) id -> . ID
    (26) datatype -> . number
    (27) datatype -> . bool
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER
    (30) bool -> . TRUE
    (31) bool -> . FALSE

    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32

    list                           shift and go to state 33
    entity                         shift and go to state 34
    datatype                       shift and go to state 28
    id                             shift and go to state 29
    number                         shift and go to state 30
    bool                           shift and go to state 27

state 11

    (11) term -> factor .

    TIMES           reduce using rule 11 (term -> factor .)
    DIVIDED         reduce using rule 11 (term -> factor .)
    PERIOD          reduce using rule 11 (term -> factor .)
    PLUS            reduce using rule 11 (term -> factor .)
    MINUS           reduce using rule 11 (term -> factor .)


state 12

    (34) id -> ID .

    IS              reduce using rule 34 (id -> ID .)
    ARE             reduce using rule 34 (id -> ID .)
    A               reduce using rule 34 (id -> ID .)
    TRUE            reduce using rule 34 (id -> ID .)
    FALSE           reduce using rule 34 (id -> ID .)
    ID              reduce using rule 34 (id -> ID .)
    NUMBER          reduce using rule 34 (id -> ID .)
    NEGATIVE        reduce using rule 34 (id -> ID .)
    COMMA           reduce using rule 34 (id -> ID .)
    QUEST           reduce using rule 34 (id -> ID .)
    PERIOD          reduce using rule 34 (id -> ID .)


state 13

    (12) factor -> number .

    TIMES           reduce using rule 12 (factor -> number .)
    DIVIDED         reduce using rule 12 (factor -> number .)
    PERIOD          reduce using rule 12 (factor -> number .)
    PLUS            reduce using rule 12 (factor -> number .)
    MINUS           reduce using rule 12 (factor -> number .)


state 14

    (32) number -> NUMBER .

    TIMES           reduce using rule 32 (number -> NUMBER .)
    DIVIDED         reduce using rule 32 (number -> NUMBER .)
    PERIOD          reduce using rule 32 (number -> NUMBER .)
    PLUS            reduce using rule 32 (number -> NUMBER .)
    MINUS           reduce using rule 32 (number -> NUMBER .)
    A               reduce using rule 32 (number -> NUMBER .)
    TRUE            reduce using rule 32 (number -> NUMBER .)
    FALSE           reduce using rule 32 (number -> NUMBER .)
    ID              reduce using rule 32 (number -> NUMBER .)
    NUMBER          reduce using rule 32 (number -> NUMBER .)
    NEGATIVE        reduce using rule 32 (number -> NUMBER .)
    COMMA           reduce using rule 32 (number -> NUMBER .)
    QUEST           reduce using rule 32 (number -> NUMBER .)


state 15

    (33) number -> NEGATIVE . NUMBER

    NUMBER          shift and go to state 35


state 16

    (1) program -> program sentence .

    WHAT            reduce using rule 1 (program -> program sentence .)
    IS_UP           reduce using rule 1 (program -> program sentence .)
    ARE_UP          reduce using rule 1 (program -> program sentence .)
    ID              reduce using rule 1 (program -> program sentence .)
    NUMBER          reduce using rule 1 (program -> program sentence .)
    NEGATIVE        reduce using rule 1 (program -> program sentence .)
    $end            reduce using rule 1 (program -> program sentence .)


state 17

    (3) sentence -> expression PERIOD .

    WHAT            reduce using rule 3 (sentence -> expression PERIOD .)
    IS_UP           reduce using rule 3 (sentence -> expression PERIOD .)
    ARE_UP          reduce using rule 3 (sentence -> expression PERIOD .)
    ID              reduce using rule 3 (sentence -> expression PERIOD .)
    NUMBER          reduce using rule 3 (sentence -> expression PERIOD .)
    NEGATIVE        reduce using rule 3 (sentence -> expression PERIOD .)
    $end            reduce using rule 3 (sentence -> expression PERIOD .)


state 18

    (7) expression -> expression PLUS . term
    (9) term -> . term TIMES factor
    (10) term -> . term DIVIDED BY factor
    (11) term -> . factor
    (12) factor -> . number
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER

    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15

    term                           shift and go to state 36
    factor                         shift and go to state 11
    number                         shift and go to state 13

state 19

    (8) expression -> expression MINUS . term
    (9) term -> . term TIMES factor
    (10) term -> . term DIVIDED BY factor
    (11) term -> . factor
    (12) factor -> . number
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER

    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15

    term                           shift and go to state 37
    factor                         shift and go to state 11
    number                         shift and go to state 13

state 20

    (4) sentence -> definition PERIOD .

    WHAT            reduce using rule 4 (sentence -> definition PERIOD .)
    IS_UP           reduce using rule 4 (sentence -> definition PERIOD .)
    ARE_UP          reduce using rule 4 (sentence -> definition PERIOD .)
    ID              reduce using rule 4 (sentence -> definition PERIOD .)
    NUMBER          reduce using rule 4 (sentence -> definition PERIOD .)
    NEGATIVE        reduce using rule 4 (sentence -> definition PERIOD .)
    $end            reduce using rule 4 (sentence -> definition PERIOD .)


state 21

    (9) term -> term TIMES . factor
    (12) factor -> . number
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER

    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15

    factor                         shift and go to state 38
    number                         shift and go to state 13

state 22

    (10) term -> term DIVIDED . BY factor

    BY              shift and go to state 39


state 23

    (13) definition -> id IS . A id
    (14) definition -> id IS . AN id
    (16) definition -> id IS . COLON list
    (17) definition -> id IS . datatype
    (26) datatype -> . number
    (27) datatype -> . bool
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER
    (30) bool -> . TRUE
    (31) bool -> . FALSE

    A               shift and go to state 40
    AN              shift and go to state 41
    COLON           shift and go to state 42
    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32

    datatype                       shift and go to state 43
    number                         shift and go to state 30
    bool                           shift and go to state 27

state 24

    (15) definition -> id ARE . COLON list

    COLON           shift and go to state 44


state 25

    (18) question -> WHAT IS . entity QUEST
    (24) entity -> . id
    (25) entity -> . datatype
    (34) id -> . ID
    (26) datatype -> . number
    (27) datatype -> . bool
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER
    (30) bool -> . TRUE
    (31) bool -> . FALSE

    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32

    entity                         shift and go to state 45
    id                             shift and go to state 29
    datatype                       shift and go to state 28
    number                         shift and go to state 30
    bool                           shift and go to state 27

state 26

    (19) question -> IS_UP entity . bool QUEST
    (20) question -> IS_UP entity . A datatype QUEST
    (21) question -> IS_UP entity . entity QUEST
    (30) bool -> . TRUE
    (31) bool -> . FALSE
    (24) entity -> . id
    (25) entity -> . datatype
    (34) id -> . ID
    (26) datatype -> . number
    (27) datatype -> . bool
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER

    A               shift and go to state 48
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15

    entity                         shift and go to state 46
    bool                           shift and go to state 47
    datatype                       shift and go to state 28
    id                             shift and go to state 29
    number                         shift and go to state 30

state 27

    (27) datatype -> bool .

    A               reduce using rule 27 (datatype -> bool .)
    TRUE            reduce using rule 27 (datatype -> bool .)
    FALSE           reduce using rule 27 (datatype -> bool .)
    ID              reduce using rule 27 (datatype -> bool .)
    NUMBER          reduce using rule 27 (datatype -> bool .)
    NEGATIVE        reduce using rule 27 (datatype -> bool .)
    COMMA           reduce using rule 27 (datatype -> bool .)
    PERIOD          reduce using rule 27 (datatype -> bool .)
    QUEST           reduce using rule 27 (datatype -> bool .)


state 28

    (25) entity -> datatype .

    A               reduce using rule 25 (entity -> datatype .)
    TRUE            reduce using rule 25 (entity -> datatype .)
    FALSE           reduce using rule 25 (entity -> datatype .)
    ID              reduce using rule 25 (entity -> datatype .)
    NUMBER          reduce using rule 25 (entity -> datatype .)
    NEGATIVE        reduce using rule 25 (entity -> datatype .)
    COMMA           reduce using rule 25 (entity -> datatype .)
    QUEST           reduce using rule 25 (entity -> datatype .)
    PERIOD          reduce using rule 25 (entity -> datatype .)


state 29

    (24) entity -> id .

    A               reduce using rule 24 (entity -> id .)
    TRUE            reduce using rule 24 (entity -> id .)
    FALSE           reduce using rule 24 (entity -> id .)
    ID              reduce using rule 24 (entity -> id .)
    NUMBER          reduce using rule 24 (entity -> id .)
    NEGATIVE        reduce using rule 24 (entity -> id .)
    COMMA           reduce using rule 24 (entity -> id .)
    QUEST           reduce using rule 24 (entity -> id .)
    PERIOD          reduce using rule 24 (entity -> id .)


state 30

    (26) datatype -> number .

    A               reduce using rule 26 (datatype -> number .)
    TRUE            reduce using rule 26 (datatype -> number .)
    FALSE           reduce using rule 26 (datatype -> number .)
    ID              reduce using rule 26 (datatype -> number .)
    NUMBER          reduce using rule 26 (datatype -> number .)
    NEGATIVE        reduce using rule 26 (datatype -> number .)
    COMMA           reduce using rule 26 (datatype -> number .)
    PERIOD          reduce using rule 26 (datatype -> number .)
    QUEST           reduce using rule 26 (datatype -> number .)


state 31

    (30) bool -> TRUE .

    A               reduce using rule 30 (bool -> TRUE .)
    TRUE            reduce using rule 30 (bool -> TRUE .)
    FALSE           reduce using rule 30 (bool -> TRUE .)
    ID              reduce using rule 30 (bool -> TRUE .)
    NUMBER          reduce using rule 30 (bool -> TRUE .)
    NEGATIVE        reduce using rule 30 (bool -> TRUE .)
    COMMA           reduce using rule 30 (bool -> TRUE .)
    PERIOD          reduce using rule 30 (bool -> TRUE .)
    QUEST           reduce using rule 30 (bool -> TRUE .)


state 32

    (31) bool -> FALSE .

    A               reduce using rule 31 (bool -> FALSE .)
    TRUE            reduce using rule 31 (bool -> FALSE .)
    FALSE           reduce using rule 31 (bool -> FALSE .)
    ID              reduce using rule 31 (bool -> FALSE .)
    NUMBER          reduce using rule 31 (bool -> FALSE .)
    NEGATIVE        reduce using rule 31 (bool -> FALSE .)
    COMMA           reduce using rule 31 (bool -> FALSE .)
    PERIOD          reduce using rule 31 (bool -> FALSE .)
    QUEST           reduce using rule 31 (bool -> FALSE .)


state 33

    (22) question -> ARE_UP list . entity QUEST
    (24) entity -> . id
    (25) entity -> . datatype
    (34) id -> . ID
    (26) datatype -> . number
    (27) datatype -> . bool
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER
    (30) bool -> . TRUE
    (31) bool -> . FALSE

    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32

    entity                         shift and go to state 49
    id                             shift and go to state 29
    datatype                       shift and go to state 28
    number                         shift and go to state 30
    bool                           shift and go to state 27

state 34

    (23) question -> ARE_UP entity . A datatype QUEST
    (28) list -> entity . COMMA list
    (29) list -> entity .

    A               shift and go to state 50
    COMMA           shift and go to state 51
    ID              reduce using rule 29 (list -> entity .)
    NUMBER          reduce using rule 29 (list -> entity .)
    NEGATIVE        reduce using rule 29 (list -> entity .)
    TRUE            reduce using rule 29 (list -> entity .)
    FALSE           reduce using rule 29 (list -> entity .)


state 35

    (33) number -> NEGATIVE NUMBER .

    TIMES           reduce using rule 33 (number -> NEGATIVE NUMBER .)
    DIVIDED         reduce using rule 33 (number -> NEGATIVE NUMBER .)
    PERIOD          reduce using rule 33 (number -> NEGATIVE NUMBER .)
    PLUS            reduce using rule 33 (number -> NEGATIVE NUMBER .)
    MINUS           reduce using rule 33 (number -> NEGATIVE NUMBER .)
    A               reduce using rule 33 (number -> NEGATIVE NUMBER .)
    TRUE            reduce using rule 33 (number -> NEGATIVE NUMBER .)
    FALSE           reduce using rule 33 (number -> NEGATIVE NUMBER .)
    ID              reduce using rule 33 (number -> NEGATIVE NUMBER .)
    NUMBER          reduce using rule 33 (number -> NEGATIVE NUMBER .)
    NEGATIVE        reduce using rule 33 (number -> NEGATIVE NUMBER .)
    COMMA           reduce using rule 33 (number -> NEGATIVE NUMBER .)
    QUEST           reduce using rule 33 (number -> NEGATIVE NUMBER .)


state 36

    (7) expression -> expression PLUS term .
    (9) term -> term . TIMES factor
    (10) term -> term . DIVIDED BY factor

    PERIOD          reduce using rule 7 (expression -> expression PLUS term .)
    PLUS            reduce using rule 7 (expression -> expression PLUS term .)
    MINUS           reduce using rule 7 (expression -> expression PLUS term .)
    TIMES           shift and go to state 21
    DIVIDED         shift and go to state 22


state 37

    (8) expression -> expression MINUS term .
    (9) term -> term . TIMES factor
    (10) term -> term . DIVIDED BY factor

    PERIOD          reduce using rule 8 (expression -> expression MINUS term .)
    PLUS            reduce using rule 8 (expression -> expression MINUS term .)
    MINUS           reduce using rule 8 (expression -> expression MINUS term .)
    TIMES           shift and go to state 21
    DIVIDED         shift and go to state 22


state 38

    (9) term -> term TIMES factor .

    TIMES           reduce using rule 9 (term -> term TIMES factor .)
    DIVIDED         reduce using rule 9 (term -> term TIMES factor .)
    PERIOD          reduce using rule 9 (term -> term TIMES factor .)
    PLUS            reduce using rule 9 (term -> term TIMES factor .)
    MINUS           reduce using rule 9 (term -> term TIMES factor .)


state 39

    (10) term -> term DIVIDED BY . factor
    (12) factor -> . number
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER

    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15

    factor                         shift and go to state 52
    number                         shift and go to state 13

state 40

    (13) definition -> id IS A . id
    (34) id -> . ID

    ID              shift and go to state 12

    id                             shift and go to state 53

state 41

    (14) definition -> id IS AN . id
    (34) id -> . ID

    ID              shift and go to state 12

    id                             shift and go to state 54

state 42

    (16) definition -> id IS COLON . list
    (28) list -> . entity COMMA list
    (29) list -> . entity
    (24) entity -> . id
    (25) entity -> . datatype
    (34) id -> . ID
    (26) datatype -> . number
    (27) datatype -> . bool
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER
    (30) bool -> . TRUE
    (31) bool -> . FALSE

    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32

    id                             shift and go to state 29
    list                           shift and go to state 55
    entity                         shift and go to state 56
    datatype                       shift and go to state 28
    number                         shift and go to state 30
    bool                           shift and go to state 27

state 43

    (17) definition -> id IS datatype .

    PERIOD          reduce using rule 17 (definition -> id IS datatype .)


state 44

    (15) definition -> id ARE COLON . list
    (28) list -> . entity COMMA list
    (29) list -> . entity
    (24) entity -> . id
    (25) entity -> . datatype
    (34) id -> . ID
    (26) datatype -> . number
    (27) datatype -> . bool
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER
    (30) bool -> . TRUE
    (31) bool -> . FALSE

    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32

    id                             shift and go to state 29
    list                           shift and go to state 57
    entity                         shift and go to state 56
    datatype                       shift and go to state 28
    number                         shift and go to state 30
    bool                           shift and go to state 27

state 45

    (18) question -> WHAT IS entity . QUEST

    QUEST           shift and go to state 58


state 46

    (21) question -> IS_UP entity entity . QUEST

    QUEST           shift and go to state 59


state 47

    (19) question -> IS_UP entity bool . QUEST
    (27) datatype -> bool .

  ! shift/reduce conflict for QUEST resolved as shift
    QUEST           shift and go to state 60

  ! QUEST           [ reduce using rule 27 (datatype -> bool .) ]


state 48

    (20) question -> IS_UP entity A . datatype QUEST
    (26) datatype -> . number
    (27) datatype -> . bool
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER
    (30) bool -> . TRUE
    (31) bool -> . FALSE

    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32

    datatype                       shift and go to state 61
    number                         shift and go to state 30
    bool                           shift and go to state 27

state 49

    (22) question -> ARE_UP list entity . QUEST

    QUEST           shift and go to state 62


state 50

    (23) question -> ARE_UP entity A . datatype QUEST
    (26) datatype -> . number
    (27) datatype -> . bool
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER
    (30) bool -> . TRUE
    (31) bool -> . FALSE

    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32

    datatype                       shift and go to state 63
    number                         shift and go to state 30
    bool                           shift and go to state 27

state 51

    (28) list -> entity COMMA . list
    (28) list -> . entity COMMA list
    (29) list -> . entity
    (24) entity -> . id
    (25) entity -> . datatype
    (34) id -> . ID
    (26) datatype -> . number
    (27) datatype -> . bool
    (32) number -> . NUMBER
    (33) number -> . NEGATIVE NUMBER
    (30) bool -> . TRUE
    (31) bool -> . FALSE

    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    NEGATIVE        shift and go to state 15
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32

    entity                         shift and go to state 56
    list                           shift and go to state 64
    id                             shift and go to state 29
    datatype                       shift and go to state 28
    number                         shift and go to state 30
    bool                           shift and go to state 27

state 52

    (10) term -> term DIVIDED BY factor .

    TIMES           reduce using rule 10 (term -> term DIVIDED BY factor .)
    DIVIDED         reduce using rule 10 (term -> term DIVIDED BY factor .)
    PERIOD          reduce using rule 10 (term -> term DIVIDED BY factor .)
    PLUS            reduce using rule 10 (term -> term DIVIDED BY factor .)
    MINUS           reduce using rule 10 (term -> term DIVIDED BY factor .)


state 53

    (13) definition -> id IS A id .

    PERIOD          reduce using rule 13 (definition -> id IS A id .)


state 54

    (14) definition -> id IS AN id .

    PERIOD          reduce using rule 14 (definition -> id IS AN id .)


state 55

    (16) definition -> id IS COLON list .

    PERIOD          reduce using rule 16 (definition -> id IS COLON list .)


state 56

    (28) list -> entity . COMMA list
    (29) list -> entity .

    COMMA           shift and go to state 51
    PERIOD          reduce using rule 29 (list -> entity .)
    ID              reduce using rule 29 (list -> entity .)
    NUMBER          reduce using rule 29 (list -> entity .)
    NEGATIVE        reduce using rule 29 (list -> entity .)
    TRUE            reduce using rule 29 (list -> entity .)
    FALSE           reduce using rule 29 (list -> entity .)


state 57

    (15) definition -> id ARE COLON list .

    PERIOD          reduce using rule 15 (definition -> id ARE COLON list .)


state 58

    (18) question -> WHAT IS entity QUEST .

    WHAT            reduce using rule 18 (question -> WHAT IS entity QUEST .)
    IS_UP           reduce using rule 18 (question -> WHAT IS entity QUEST .)
    ARE_UP          reduce using rule 18 (question -> WHAT IS entity QUEST .)
    ID              reduce using rule 18 (question -> WHAT IS entity QUEST .)
    NUMBER          reduce using rule 18 (question -> WHAT IS entity QUEST .)
    NEGATIVE        reduce using rule 18 (question -> WHAT IS entity QUEST .)
    $end            reduce using rule 18 (question -> WHAT IS entity QUEST .)


state 59

    (21) question -> IS_UP entity entity QUEST .

    WHAT            reduce using rule 21 (question -> IS_UP entity entity QUEST .)
    IS_UP           reduce using rule 21 (question -> IS_UP entity entity QUEST .)
    ARE_UP          reduce using rule 21 (question -> IS_UP entity entity QUEST .)
    ID              reduce using rule 21 (question -> IS_UP entity entity QUEST .)
    NUMBER          reduce using rule 21 (question -> IS_UP entity entity QUEST .)
    NEGATIVE        reduce using rule 21 (question -> IS_UP entity entity QUEST .)
    $end            reduce using rule 21 (question -> IS_UP entity entity QUEST .)


state 60

    (19) question -> IS_UP entity bool QUEST .
